fixed scrollbars

--- a/bullsPage/bullsPageCSS.css
+++ b/bullsPage/bullsPageCSS.css
@@ -24,6 +24,7 @@ html {
 body {
     height: 100%;
     width: 100%;
+    overflow-x: hidden;
 }
 
 body h1 {
@@ -36,6 +37,28 @@ body h1 img {
 }
 
 /* HTML AND BODY CSS */
+
+/* scrollbar css */
+body::-webkit-scrollbar {
+    background-color: #000000;
+    height: 12px;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: #000000;
+    border-radius: 100vw;
+    margin-block: .5em;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #57061a;
+    border-radius: 100vw;
+    border: .15em solid #000000;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+    background-color: #380512;
+}
 
 /* bullsPieces CSS */
 
