--- a/celticsPage/celticsPageCSS.css
+++ b/celticsPage/celticsPageCSS.css
@@ -18,11 +18,13 @@ html {
     filter: brightness(120%);
 
     overflow-x: hidden;
+    overflow-y: hidden;
     
 }
 
 body{
     height: 100%;
+    
 }
 
 .celticsPieces {
@@ -34,10 +36,32 @@ body{
     overflow-x: scroll;
     white-space: nowrap;
     position: fixed;
-    bottom: 0%;
+    bottom: 3%;
     left: 0%;
     outline: none;
     
+}
+
+.celticsPieces::-webkit-scrollbar {
+    background-color: #ba9653;
+    height: 20px;
+    display: flex;
+}
+
+.celticsPieces::-webkit-scrollbar-track {
+    background-color: #796136;
+    border-radius: 100vw;
+    margin-block: .5em;
+}
+
+.celticsPieces::-webkit-scrollbar-thumb {
+    background-color: #007a33;
+    border-radius: 100vw;
+    border: .15em solid #796136;
+}
+
+.celticsPieces::-webkit-scrollbar-thumb:hover {
+    background-color: #013d1a;
 }
 
 
