--- a/contentPage/contentPageStylesheet.css
+++ b/contentPage/contentPageStylesheet.css
@@ -19,6 +19,28 @@ html {
     overflow-x: hidden;
 }
 
+html::-webkit-scrollbar {
+    background-color: #000000;
+    height: 20px;
+    display: flex;
+}
+
+html::-webkit-scrollbar-track {
+    background-color: #000000;
+    border-radius: 100vw;
+    margin-block: .5em;
+}
+
+html::-webkit-scrollbar-thumb {
+    background-color: #696969;
+    border-radius: 100vw;
+    border: .15em solid #000000;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+    background-color: #535353;
+}
+
 
 body {
     height: 100%;
